--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4         2.0  29899  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "cars = pd.read_csv('https://raw.githubusercontent.com/fferegrino/cf-ml/main/car-prices/cars.csv')\n",
+    "cars = pd.read_csv('data/CarsUK.csv')\n",
     "cars.head()"
    ]
   }
