one hot encoding

--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <p style=\"background: #F58A07; color:white; font-size:250%; text-align:Center; border-radius: 20px 100px;\"> 💸 Precio de automoviles usados 💹 </p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> 🔎 Análisis Exploratorio de Datos - EDA </p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,16 +138,560 @@
        "4         2.0  29899  "
       ]
      },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Librerias iniciales\n",
+    "import pandas as pd \n",
+    "\n",
+    "# Carga del dataset\n",
+    "cars = pd.read_csv('data/CarsUK.csv')\n",
+    "\n",
+    "# primeros 10 reguistros del dataset\n",
+    "cars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas_profiling import ProfileReport\n",
+    "\n",
+    "profile = ProfileReport(cars, title='Análisis del conjunto de datos de automóviles en bruto', explorative=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Summarize dataset: 100%|██████████| 61/61 [00:12<00:00,  4.98it/s, Completed]                     \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:02<00:00,  2.87s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:01<00:00,  1.48s/it]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00,  2.80it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Primeros pasos en el dataset, brinda una extensa información sobre el dataset, como la cantidad de registros, la cantidad de columnas, etc.\n",
+    "# Tomando como punto de partida el reporte anterior, se puede decidir que hacer con los datos que se encuentran disponibles.\n",
+    "\n",
+    "profile.to_file('reporte_cars.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> 🔮 Feature engineering </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108540"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# En el reporte se destaca que existen datos duplicados en el dataset. \n",
+    "\n",
+    "# Mostramos la cantidad de registros\n",
+    "len(cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2273"
+      ]
+     },
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd \n",
+    "# Mostramos la cantidad de registros duplicados\n",
+    "cars.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminamos los registros duplicados\n",
+    "cars = cars.drop_duplicates(keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "106267"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mostramos la cantidad de registros (actualizado)\n",
+    "len(cars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> 🪓 Dividir el dataset </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Librerias para dividir mejor el dataset\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "cars = pd.read_csv('data/CarsUK.csv')\n",
-    "cars.head()"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[63759 21254 21254]\n",
+      "[0.59998871 0.20000565 0.20000565]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "rest, test = train_test_split(cars, test_size=0.2, shuffle=True) # 20% de 100 = 20\n",
+    "\n",
+    "train, val = train_test_split(rest, test_size=0.25,shuffle=True ) # 25% de 80 = 20\n",
+    "\n",
+    "distributions = np.array([len(train), len(val), len(test)])\n",
+    "\n",
+    "print(distributions)\n",
+    "print(distributions/ len(cars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ??cars.drop_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40738</th>\n",
+       "      <td>ford</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35328</th>\n",
+       "      <td>ford</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1389</th>\n",
+       "      <td>cclass</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64923</th>\n",
+       "      <td>bmw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88699</th>\n",
+       "      <td>vw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6394</th>\n",
+       "      <td>focus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15059</th>\n",
+       "      <td>audi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22215</th>\n",
+       "      <td>toyota</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102865</th>\n",
+       "      <td>merc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28413</th>\n",
+       "      <td>skoda</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63759 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         maker\n",
+       "40738     ford\n",
+       "35328     ford\n",
+       "1389    cclass\n",
+       "64923      bmw\n",
+       "88699       vw\n",
+       "...        ...\n",
+       "6394     focus\n",
+       "15059     audi\n",
+       "22215   toyota\n",
+       "102865    merc\n",
+       "28413    skoda\n",
+       "\n",
+       "[63759 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Cambiamos las variables categoricas a numericas mediante dummies/\n",
+    "# Prueba en los valores maker == Fabricante \n",
+    "\n",
+    "# Valores originales\n",
+    "train[['maker']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maker_audi</th>\n",
+       "      <th>maker_bmw</th>\n",
+       "      <th>maker_cclass</th>\n",
+       "      <th>maker_focus</th>\n",
+       "      <th>maker_ford</th>\n",
+       "      <th>maker_hyundi</th>\n",
+       "      <th>maker_merc</th>\n",
+       "      <th>maker_skoda</th>\n",
+       "      <th>maker_toyota</th>\n",
+       "      <th>maker_vauxhall</th>\n",
+       "      <th>maker_vw</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40738</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35328</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1389</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64923</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88699</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6394</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15059</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22215</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102865</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28413</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63759 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        maker_audi  maker_bmw  maker_cclass  maker_focus  maker_ford  \\\n",
+       "40738            0          0             0            0           1   \n",
+       "35328            0          0             0            0           1   \n",
+       "1389             0          0             1            0           0   \n",
+       "64923            0          1             0            0           0   \n",
+       "88699            0          0             0            0           0   \n",
+       "...            ...        ...           ...          ...         ...   \n",
+       "6394             0          0             0            1           0   \n",
+       "15059            1          0             0            0           0   \n",
+       "22215            0          0             0            0           0   \n",
+       "102865           0          0             0            0           0   \n",
+       "28413            0          0             0            0           0   \n",
+       "\n",
+       "        maker_hyundi  maker_merc  maker_skoda  maker_toyota  maker_vauxhall  \\\n",
+       "40738              0           0            0             0               0   \n",
+       "35328              0           0            0             0               0   \n",
+       "1389               0           0            0             0               0   \n",
+       "64923              0           0            0             0               0   \n",
+       "88699              0           0            0             0               0   \n",
+       "...              ...         ...          ...           ...             ...   \n",
+       "6394               0           0            0             0               0   \n",
+       "15059              0           0            0             0               0   \n",
+       "22215              0           0            0             1               0   \n",
+       "102865             0           1            0             0               0   \n",
+       "28413              0           0            1             0               0   \n",
+       "\n",
+       "        maker_vw  \n",
+       "40738          0  \n",
+       "35328          0  \n",
+       "1389           0  \n",
+       "64923          0  \n",
+       "88699          1  \n",
+       "...          ...  \n",
+       "6394           0  \n",
+       "15059          0  \n",
+       "22215          0  \n",
+       "102865         0  \n",
+       "28413          0  \n",
+       "\n",
+       "[63759 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Valores dummies\n",
+    "pd.get_dummies(train[['maker']])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#e5e5e5; color:black; font-family:newtimeroman; font-size:140%; text-align:left; border-radius: 10px 10px;\"> 📨 txt </p>\n",
+    "\n"
    ]
   }
  ],
