--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <p style=\"background: #F58A07; color:white; font-size:250%; text-align:Center; border-radius: 20px 100px;\"> 💸 Precio de automoviles usados 💹 </p>\n"
+    "# <p style=\"background: #F58A07; color:white; font-size:250%; text-align:Center; border-radius: 20px 100px;\"> 💸 Precios de automoviles usados 💹 </p>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> 🔎 Análisis Exploratorio de Datos - EDA </p>"
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> 🔎 Análisis Exploratorio de Datos - EDA </p>"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> 🔮 Feature engineering </p>"
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> 🔮 Feature engineering </p>"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> 🪓 Dividir el dataset </p>"
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> 🪓 Dividir el dataset </p>"
    ]
   },
   {
@@ -691,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:150%; text-align:left; border-radius: 10px 10px;\"> ✖️ One hot enconding </p>"
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> ✖️ One hot enconding </p>"
    ]
   },
   {
@@ -888,6 +888,179 @@
    "metadata": {},
    "source": [
     "\"Prefiero que el modelo falle a que realice una predicción incorrecta\" - Antonio Feregrino"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> 📐 Feature Scaling </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evitar que el modelo asigne mayor prioridad a una categoria que otra\n",
+    "# Comprime valores mas grandes para que todos se encuentren en un rango similar \n",
+    "\n",
+    "# En sklearn exiten herramientas que permiten realizar esto de manera eficiente, mostrando variantes para cada caso\n",
+    "from sklearn.preprocessing import RobustScaler, StandardScaler, MinMaxScaler, MaxAbsScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ejemplo con minmax\n",
+    "scaler = MinMaxScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MinMaxScaler()"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.fit(train[['mileage']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled = scaler.transform(train[['mileage']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02747377],\n",
+       "       [0.081734  ],\n",
+       "       [0.13002827],\n",
+       "       ...,\n",
+       "       [0.04166886],\n",
+       "       [0.11980223],\n",
+       "       [0.05760389]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Demostracion de la transformacion\n",
+    "values = pd.DataFrame({'mileage': train['mileage'].values, 'scaled':scaled.squeeze()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>scaled</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>63672</th>\n",
+       "      <td>23050</td>\n",
+       "      <td>0.071359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57216</th>\n",
+       "      <td>5669</td>\n",
+       "      <td>0.017548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15572</th>\n",
+       "      <td>14671</td>\n",
+       "      <td>0.045418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15323</th>\n",
+       "      <td>41685</td>\n",
+       "      <td>0.129053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5855</th>\n",
+       "      <td>20860</td>\n",
+       "      <td>0.064579</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       mileage    scaled\n",
+       "63672    23050  0.071359\n",
+       "57216     5669  0.017548\n",
+       "15572    14671  0.045418\n",
+       "15323    41685  0.129053\n",
+       "5855     20860  0.064579"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values.sample(5)"
    ]
   },
   {
