--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -2118,6 +2118,175 @@
     "      Entrenamiento MSE: {train_mse:2.02f}\n",
     "      Validacion MSE: {val_mse:2.02f}''')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> 💾 Guardar Pipeline </p>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['car-prices.model']"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump, load\n",
+    "\n",
+    "dump(predic_pipeline, 'car-prices.model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"background-color:#ffb703; color:black; font-family:newtimeroman; font-size:200%; text-align:left; border-radius: 10px 10px;\"> 🧪 Probar el modelo </p>\n",
+    "\n",
+    "Se puede utilizar un nuevo notebook, por comodidad, se cargara en este mismo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Para cargar el modelo que guardamos \n",
+    "from joblib import load\n",
+    "# Para el ejercicio, crearemos un dataframe con pandas\n",
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargamos nuestro modelo en una variable\n",
+    "saved_pipeline = load('car-prices.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Datos falsos para poder probar el modelo que se creo\n",
+    "maker='ford'\n",
+    "model='focus'\n",
+    "year=2020\n",
+    "transmission='Manual'\n",
+    "mileage=50\n",
+    "fuelType='Petrol'\n",
+    "tax=100\n",
+    "mpg=30\n",
+    "engineSize=1.5\n",
+    "\n",
+    "carrito_prueba = pd.DataFrame({\n",
+    "    'maker':[maker], 'model':[model], 'year':[year], 'transmission':[transmission], 'mileage':[mileage], 'fuelType':[fuelType], 'tax':[tax], 'mpg':[mpg], 'engineSize':[engineSize]\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maker</th>\n",
+       "      <th>model</th>\n",
+       "      <th>year</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>fuelType</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>engineSize</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ford</td>\n",
+       "      <td>focus</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>100</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  maker  model  year transmission  mileage fuelType  tax  mpg  engineSize\n",
+       "0  ford  focus  2020       Manual       50   Petrol  100   30         1.5"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carrito_prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El precio estimado de tu auto es de $ 22252.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = saved_pipeline.predict(carrito_prueba).squeeze()\n",
+    "\n",
+    "print(f'El precio estimado de tu auto es de $ {price:2.02f}')"
+   ]
   }
  ],
  "metadata": {
